Fixed spacing issue with the timestamp div being too small

--- a/src/components/RecordComponent/RecordComponent.scss
+++ b/src/components/RecordComponent/RecordComponent.scss
@@ -11,8 +11,8 @@
   }
 
   .RecordTimestamp {
-    width: 28mm;
-    min-width: 28mm;
+    width: 32mm;
+    min-width: 32mm;
 
     text-align: right;
   }
